[package]
name = "mat2image"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Utilities to convert opencv::Mat to image::DynamicImage"
repository = "https://github.com/rcastill/mat2image"
exclude = [
  "examples/*",
  "Makefile"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1

[env]
# In case of custom installation
PKG_CONFIG_PATH = "/usr/lib/pkgconfig:/usr/local/lib/pkgconfig:/opt/opencv4.6.0/lib64/pkgconfig"

[dependencies]
opencv    = { version = "0.64", default-features = false, features = ["rgb"] }
# Copy rgb dependency from
# https://github.com/twistedfall/opencv-rust/blob/v0.64.1/Cargo.toml
# version 0.8.20 doesn't contain the deficiency mentioned in
# https://deps.rs/crate/opencv/0.59.0#vulnerabilities
rgb       = { version = "0.8.20", default-features = false }
image     = { version = "0.24", default-features = false }
thiserror = "1.0"

[dependencies.rayon]
version = "1.5"
optional = true

[features]
default = ["rayon"]

[dev-dependencies]
opencv = "0.64"
image = "0.24"